handle slider when location have 1 image, fix last css. Next step > mode responsive on tablet

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -320,6 +320,7 @@ main {
   margin: 15px 5px 0 5px;
   @include media-min('desktop') {
     flex-direction: row;
+    justify-content: space-between;
     margin-top: 30px;
   }
 
@@ -330,6 +331,7 @@ main {
       padding-bottom: 0;
       line-height: 0;
       padding-bottom: 20px;
+      font-size: 18px;
     }
   }
 
@@ -358,6 +360,8 @@ main {
   @include media-min('desktop') {
     flex-direction: column;
     align-items: flex-end;
+    justify-content: space-between;
+    margin: 0;
   }
 }
 
